--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
 
+    implementation 'com.google.code.gson:gson:2.8.9'
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.google.android.material:material:1.6.1'
