Lesson 6. Register receiver. Override fun onReceive.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             </intent-filter>
         </receiver>
 
+        <service android:name=".service.DetailService" />
+
     </application>
 
 </manifest>
