--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    // LIBRARY Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // LIBRARY Coil
+    implementation 'io.coil-kt:coil:0.11.0'
+
 }
