--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,8 @@ dependencies {
     implementation 'io.coil-kt:coil:0.11.0'
 
     // LIBRARY GlideToVectorYou
+    // (not forget to add in main gradle --> maven { url 'https://jitpack.io' }
+    implementation 'com.github.corouteam:GlideToVectorYou:v.2.0.0'
+    implementation 'com.github.User:Repo:Tag'
 
 }
