--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,15 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
+// fro GlideToVectorYou (downloading SVG pictures)
+// don't forget to delete dependencyResolutionManagement in settings.gradle
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
