--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,25 +46,34 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // LIBRARY okhttp3
-    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    // LIBRARY GlideToVectorYou
+    // (not forget to add in main gradle --> maven { url 'https://jitpack.io' }
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
     // LIBRARY Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
+
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    // LIBRARY okhttp3
+    // implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+
 
     // LIBRARY Glide
     //implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -76,9 +85,7 @@ dependencies {
     // LIBRARY Coil
     implementation 'io.coil-kt:coil:0.11.0'
 
-    // LIBRARY GlideToVectorYou
-    // (not forget to add in main gradle --> maven { url 'https://jitpack.io' }
-    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
-    implementation 'com.github.User:Repo:Tag'
+
+    //implementation 'com.github.User:Repo:Tag'
 
 }
