--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false}
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+}
 
 // fro GlideToVectorYou (downloading SVG pictures)
 // don't forget to delete dependencyResolutionManagement in settings.gradle
-allprojects {
+/*allprojects {
     repositories {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
-}
+}*/
 
-task clean(type: Delete) {
+/*task clean(type: Delete) {
     delete rootProject.buildDir
-}
+}*/
