--- a/settings.gradle
+++ b/settings.gradle
@@ -5,12 +5,14 @@ pluginManagement {
         mavenCentral()
     }
 }
-/*dependencyResolutionManagement {
+dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
-}*/
+}
+
 rootProject.name = "Kotlin_GB"
 include ':app'
