--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+
+        android:name=".app.App"
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -28,15 +31,15 @@
             </intent-filter>
         </activity>
 
-        <receiver
+        <!--<receiver
             android:name=".utils.MainBroadcastReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
 
-        <service android:name=".service.DetailService" />
+        <!--<service android:name=".service.DetailService" />-->
 
     </application>
 
