--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyCJ-SxxE_BgdJjuZFkuq-iNiYk3p2kXmaI" />
 
         <activity
             android:name=".view.MainActivity"
