Lesson 10. Hide my GoogleMap API in apikey.properties. Change manifest:            android:value="${GOOGLE_MAP_API_KEY}"
And change file local.properties ->
GOOGLE_MAP_API_KEY=BuildConfig.GOOGLE_MAP_API_KEY

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,11 @@ android {
     buildTypes.each {
         Properties properties = new Properties()
         properties.load(project.rootProject.file("apikey.properties").newDataInputStream())
-        def apiKey = properties.getProperty("yandex_weather_api_key", "")
-        it.buildConfigField "String", "WEATHER_API_KEY", apiKey
+        def apiKeyYandexWeather = properties.getProperty("yandex_weather_api_key", "")
+        def apiKeyGoogleMaps = properties.getProperty("google_map_api_key", "")
+
+        it.buildConfigField "String", "WEATHER_API_KEY", apiKeyYandexWeather
+        it.buildConfigField "String", "GOOGLE_MAP_API_KEY", apiKeyGoogleMaps
     }
 
     buildTypes {
