--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
     // For annotations (for work with Room)
     id 'kotlin-kapt'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    // FOR FIRE CLOUD MESSAGE
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -99,5 +101,10 @@ dependencies {
     // For navigation Bottom menu
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    // FOR FIRE CLOUD MESSAGE
+    //implementation platform('com.google.firebase:firebase-bom:31.1.1')       ??? было на сайте у них
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.1'
+
 
 }
