--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,10 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-             android:value="${GOOGLE_MAP_API_KEY}"
+            android:value="${GOOGLE_MAP_API_KEY}"
 
-        />
-        <!--android:value="AIzaSyCJ-SxxE_BgdJjuZFkuq-iNiYk3p2kXmaI"-->
+            />
+
         <activity
             android:name=".view.MainActivity"
             android:exported="true"
@@ -49,6 +49,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--FOR FIRE CLOUD MESSAGE-->
+        <!--Сервис для приема сообщений от PlayService (от FCM)-->
+        <service
+            android:name=".fcm.MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
