Lesson 12. Add sign for RELEASE version.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file("keystore_release.jks")
+            storePassword '123456'
+            keyAlias '0'
+            keyPassword '123456'
+        }
+    }
+
     buildTypes.each {
         Properties properties = new Properties()
         properties.load(project.rootProject.file("apikey.properties").newDataInputStream())
@@ -32,8 +41,11 @@ android {
         it.buildConfigField "String", "GOOGLE_MAP_API_KEY", apiKeyGoogleMaps
     }
 
+
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             it.buildConfigField "String", "MY_BUILD_TYPE", "\"RELEASE\""
@@ -44,13 +56,6 @@ android {
             it.buildConfigField "String", "MY_BUILD_TYPE", "\"DEBUG\""
             resValue("string", "my_build_type", "MY DEBUG FROM RESOURCE")
         }
-        beta {
-            initWith debug
-            versionNameSuffix '-beta'
-            it.buildConfigField "String", "MY_BUILD_TYPE", "\"BETA\""
-            resValue("string", "my_build_type", "MY BETA FROM RESOURCE")
-        }
-
     }
 
     compileOptions {
@@ -64,6 +69,18 @@ android {
 
     buildFeatures {
         viewBinding = true
+    }
+    // Добавил FLAVORS
+    flavorDimensions 'version'
+    productFlavors {
+        FREE {
+            dimension 'version'
+            versionNameSuffix '.free'
+        }
+        PRO {
+            dimension 'version'
+            versionNameSuffix '.pro'
+        }
     }
 }
 
